fixed overflowing fields on submitevent removed console logs

--- a/Happnin/ClientApp/src/styles/custom.css
+++ b/Happnin/ClientApp/src/styles/custom.css
@@ -124,6 +124,10 @@ label {
   font-size: 0.5rem;
 }
 
+.inputSubmitText {
+    font-size: 0.8rem;
+}
+
 .inputMargin {
   margin-right: 1rem;
 }
